@@ -81,9 +81,11 @@ const switchRowSection = (dom: DOMUtils, rowElm: HTMLElement, newSectionName: st
   }
 };
 
-const switchCellType = (dom: DOMUtils, cells: ArrayLike<HTMLTableCellElement>, newCellType: string) => {
-  Arr.each(cells, (c) => Util.getNodeName(c) !== newCellType ? dom.rename(c, newCellType): c);
-};
+const switchCellType = (dom: DOMUtils, cells: ArrayLike<HTMLTableCellElement>, newCellType: string, scope: 'col' | null) =>
+  Arr.each(cells, (c) => {
+    const newCell = Util.getNodeName(c) !== newCellType ? dom.rename(c, newCellType) : c;
+    dom.setAttrib(newCell, 'scope', scope); // mutates
+  });
 
 const switchSectionType = (editor: Editor, rowElm: HTMLTableRowElement, newType: string) => {
   const determineHeaderRowType = (): 'section' | 'cells' | 'sectionCells' => {
@@ -107,10 +109,10 @@ const switchSectionType = (editor: Editor, rowElm: HTMLTableRowElement, newType:
 
     // We're going to always enforce the right td/th and thead/tbody/tfoot type.
     // switchRowSection will short circuit if not necessary to save computation
-    switchCellType(dom, rowElm.cells, headerRowType === 'section' ? 'td' : 'th');
+    switchCellType(dom, rowElm.cells, headerRowType === 'section' ? 'td' : 'th', 'col');
     switchRowSection(dom, rowElm, headerRowType === 'cells' ? 'tbody' : 'thead');
   } else {
-    switchCellType(dom, rowElm.cells, 'td'); // if switching from header to other, may need to switch th to td
+    switchCellType(dom, rowElm.cells, 'td', null); // if switching from header to other, may need to switch th to td
     switchRowSection(dom, rowElm, newType === 'footer' ? 'tfoot' : 'tbody');
   }
 };
